# libigl-python-bindings

./: .appveyor.yml  .gitignore  .travis.yml  404.html  CMakeLists.txt  README.md  azure-pipelines-1.yml  azure-pipelines.yml  bunny.off  constraints.txt  environment.yml  exporter.py  index.html  missing.sh  mkdocs.yml  plot_to_md.py  postBuild  priority.txt  pyproject.toml  setup.py  sitemap.xml  skip.txt  test_sparse.py
.claude/skills/: verify.md
.github/workflows/: pip.yml  wheels.yml
attic/copyleft/: tetgen_tetrahedralize.cpp  triangle_triangulate.cpp
attic/skip/: WindingNumberMethod.cpp  comiso_nrosy.cpp  edge_flaps.cpp  file_contents_as_string.cpp  frame_to_cross_field.cpp  group_sum_matrix.cpp  harwell_boeing.cpp  infinite_cost_stopping_condition.cpp  invert_diag.cpp  opengl2_draw_floor.cpp  opengl2_sort_triangles.cpp  opengl_create_shader_program.cpp  opengl_print_program_info_log.cpp  opengl_print_shader_info_log.cpp  parallel_transport_angles.cpp  qslim_optimal_collapse_edge_callbacks.cpp  quat_to_mat.cpp  readSTL.cpp  rgb_to_hsv.cpp  rotate_by_quat.cpp  snap_to_fixed_up.cpp  svd3x3_avx.cpp  unique_rows.cpp  voxel_grid.cpp  (+2 more)
classes/: AABB.cpp  classes.cpp
cmake/: CXXFeatures.cmake  FindLIBIGL.cmake  PyiglDependencies.cmake  PyiglDownloadExternal.cmake  Warnings.cmake
contributing/: index.html
course/: cotmatrix_entries.cpp  crouzeix_raviart_massmatrix.cpp  cut_mesh.cpp  delaunay_triangulation.cpp  hausdorff.cpp  in_element.cpp  is_edge_manifold.cpp  isolines.cpp  per_edge_normals.cpp  piecewise_constant_winding_number.cpp  procrustes.cpp  qslim.cpp  random_points_on_mesh.cpp  remove_duplicate_vertices.cpp  remove_duplicates.cpp  resolve_duplicated_faces.cpp  unproject_ray.cpp  upsample.cpp  vertex_triangle_adjacency.cpp  winding_number.cpp  write_triangle_mesh.cpp
data/: S.npy  X1.npy  index.html  test_arap2_f.npy  test_arap2_v.npy
docs/: performance_analysis.md
igl/: __init__.py  _version.py  helpers.py  viewer.py
igl_docs/: index.html
include/: default_types.h
memory/: MEMORY.md
meshplot/: Viewer.py  __init__.py  plot.py  utils.py
scripts/: basic_function.mako  blender_igl_export.py  generate_bindings.py  make_lean.py
search/: search_index.json
skip/: boundary_conditions.cpp  covariance_scatter_matrix.cpp  fit_rotations.cpp  frustum.cpp  min_quad_dense.cpp  opengl2_draw_rectangular_marquee.cpp  opengl2_up_axis.cpp  polar_svd3x3.cpp  readNODE.cpp  readPLY.cpp  rotation_matrix_from_directions.cpp  sort_angles.cpp  trackball.cpp  writeWRL.cpp
src/: AABB.cpp  FileEncoding.cpp  MappingEnergyType.cpp  MassMatrixType.cpp  OrientedBoundingBoxMinimizeType.cpp  accumarray.cpp  active_set.cpp  adjacency_list.cpp  adjacency_matrix.cpp  all_pairs_distances.cpp  ambient_occlusion.cpp  arap.cpp  arap_linear_block.cpp  arap_rhs.cpp  average_from_edges_onto_vertices.cpp  average_onto_faces.cpp  average_onto_vertices.cpp  avg_edge_length.cpp  barycenter.cpp  barycentric_coordinates.cpp  barycentric_interpolation.cpp  bbw.cpp  bezier.cpp  bfs.cpp  bfs_orient.cpp  biharmonic_coordinates.cpp  bijective_composite_harmonic_mapping.cpp  blue_noise.cpp  bone_parents.cpp  boundary_conditions.cpp  boundary_facets.cpp  boundary_loop.cpp  bounding_box.cpp  bounding_box_diagonal.cpp  centroid.cpp  circulation.cpp  circumradius.cpp  collapse_edge.cpp  collapse_small_triangles.cpp  colormap.cpp  (+237 more)
tests/: test.py  test_all.py  test_basic.py
tmp/: ambient_occlusion.cpp  angular_distance.cpp  average_onto_faces.cpp  biharmonic_coordinates.cpp  bijective_composite_harmonic_mapping.cpp  boundary_conditions.cpp  boundary_loop.cpp  bounding_box.cpp  bounding_box_diagonal.cpp  canonical_quaternions.cpp  centroid.cpp  circulation.cpp  collapse_edge.cpp  collapse_small_triangles.cpp  column_to_quats.cpp  comb_cross_field.cpp  comb_frame_field.cpp  comb_line_field.cpp  comiso_nrosy.cpp  compute_frame_field_bisectors.cpp  cross_field_missmatch.cpp  cut_mesh.cpp  cut_mesh_from_singularities.cpp  delaunay_triangulation.cpp  dihedral_angles.cpp  edges_to_path.cpp  exact_geodesic.cpp  flip_avoiding_line_search.cpp  grid.cpp  harmonic.cpp  invert_diag.cpp  is_irregular_vertex.cpp  local_basis.cpp  lscm.cpp  map_vertices_to_circle.cpp  offset_surface.cpp  planarize_quad_mesh.cpp  segment_segment_intersect.cpp  slice_tets.cpp  tetgen_tetrahedralize.cpp  (+1 more)
todo/: ambient_occlusion.cpp  angular_distance.cpp  axis_angle_to_quat.cpp  biharmonic_coordinates.cpp  bijective_composite_harmonic_mapping.cpp  bone_parents.cpp  boundary_conditions.cpp  boundary_facets.cpp  boundary_loop.cpp  bounding_box.cpp  bounding_box_diagonal.cpp  canonical_quaternions.cpp  circulation.cpp  circumradius.cpp  collapse_edge.cpp  collapse_small_triangles.cpp  colormap.cpp  column_to_quats.cpp  comb_cross_field.cpp  comb_frame_field.cpp  comb_line_field.cpp  combine.cpp  compute_frame_field_bisectors.cpp  connect_boundary_to_infinity.cpp  connected_components.cpp  copyleft_cgal_assign.cpp  copyleft_cgal_cell_adjacency.cpp  copyleft_cgal_closest_facet.cpp  copyleft_cgal_complex_to_mesh.cpp  copyleft_cgal_component_inside_component.cpp  copyleft_cgal_convex_hull.cpp  copyleft_cgal_delaunay_triangulation.cpp  copyleft_cgal_extract_cells.cpp  copyleft_cgal_extract_feature.cpp  copyleft_cgal_fast_winding_number.cpp  copyleft_cgal_half_space_box.cpp  copyleft_cgal_hausdorff.cpp  copyleft_cgal_insert_into_cdt.cpp  copyleft_cgal_insphere.cpp  copyleft_cgal_intersect_other.cpp  (+263 more)
todo-old/: png_readPNG.cpp  seam_edges.cpp  squared_edge_lengths.cpp  writeDMAT.cpp  xml_writeDAE.cpp
tut-chapter0/: index.html
tut-chapter1/: index.html
tut-chapter3/: index.html
tut-chapter5/: index.html
tut-chapter7/: index.html
tutorial/: Tutorials.ipynb  contributing.md  course_notes.ipynb  exporter.py  igl_docs.md  index.md  marching_cubes.py  plot_to_md.py  plotly_viewer.py  tut-chapter0.ipynb  tut-chapter1.ipynb  tut-chapter2.ipynb  tut-chapter3.ipynb  tut-chapter4.ipynb  tut-chapter5.ipynb  tut-chapter6.ipynb  tut-chapter7.ipynb  tutorials.ipynb  viewer.py
tutorial-old/: tutorials-broken.ipynb
tutorials/: index.html
(+115 files in other folders)
