[build-system]
requires = [
    "cmake>=3.16",
    "nanobind >=1.3.2",
    "numpy>=2.0.0; python_version >= '3.9'",
    "numpy; python_version < '3.9'",
    "packaging",
    "scikit-build-core >=0.10", 
    "scipy",
    "typing_extensions",
    ]
build-backend = "scikit_build_core.build"


[project]
name = "libigl"
version = "2.6.1"
description = "libigl: A simple C++ geometry processing library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Alec Jacobson", email = "alecjacobson@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
]
dependencies = [
    "numpy",
    "scipy"
]

[project.urls]
Homepage = "https://github.com/libigl/libigl-python-bindings"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.scikit-build.cmake]
build-type = "Release"

[tool.cibuildwheel]
archs = "auto64"
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# linux images
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

# Don't test Python 3.8 wheels on macOS/arm64
test-skip="cp38-macosx_*:arm64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.15"
